--- a/domino2sql-app/resources/arc.sql.config.json
+++ b/domino2sql-app/resources/arc.sql.config.json
@@ -7,36 +7,28 @@
   "options": [
     {
       "enable": true,
-      "version": "1.6.7",
+      "version": "1.0.0",
       "ftppath": "/FTP_XC/",
       "domino_server": "OA/SRV/FJSF",
       "domino_queries": [
         {
           "enable": true,
           "error_continue": true,
-          "domino_query": "Form=\"FlowForm\" & MSSDATABASE!=\"\"",
-          "domino_dbpath": "egov/approval.nsf",
+          "domino_query": "Form=\"FlowForm\" & MSSDATABASE!=\"\"  & @Text(@DocumentUniqueID) = \"5C67882BCCB59510482588250011D2B0\" ",
+          "domino_dbpath": "egov/stationerynew.nsf",
           "update_mode_no_insert": false
         }
       ],
       "before_action_driver": "com.lwjhn.domino2sql.driver.BeforeActionDriverFormula",
-      "on_action_driver": "com.rjsoft.driver.OnActionDriverMongoDb",
+      "on_action_driver": "com.lwjhn.domino2sql.driver.OnActionExtensionDocuments",
       "after_action_driver": "com.lwjhn.domino2sql.driver.AfterActionDriverFormula",
       "extended_options": {
-        "before_sql_formula": "FileId:= ArcXC_UUID_16; @If(FileId=\"\";@Nothing; \"UPDATE EGOV_ATT SET STATUS = '删除' WHERE DOC_ID = '\"+FileId+\"'\");",
-        "after_sql_formula": "docId:= ArcXC_UUID_16; DOMINO_PID := @Text(@DocumentUniqueID);\n@if(docId=\"\";@Nothing; \"UPDATE EGOV_OPINION SET DOC_ID = '\"+ArcXC_UUID_16+\"' WHERE DOMINO_PID ='\"+DOMINO_PID+\"'\");",
-        "export_flow": true,
-        "export_processing": false,
-        "export_opinion": false,
-        "mongo_url": "mongodb://192.168.210.186:27017",
-        "mongo_db": "sftoamongo",
-        "mongo_bucket": "fs",
-        "mongo_file_id_formula": "@SetField(\"_mongodb_file_id_\";\"@UUID16\");_mongodb_file_id_",
-        "mongo_map_sql_formula": "DocId:= ArcXC_UUID_16;\nFileId:= _mongodb_file_id_;\nFileType:=@LowerCase(\"@FileType\");FileType:=@If(FileType=\"mss\";\"main_doc\";FileType=\"flow\";\"flow\";\"attach\");\n\"INSERT INTO EGOV_ATT (ID, MODULE_ID, DOC_ID, EGOV_FILE_ID, FILE_NAME, FILE_SUFFIX, \\\"TYPE\\\", STATUS, SORT_TIME, CREATE_TIME) \n\tVALUES('\"+ FileId +\"', '\"+@Right(@ReplaceSubstring(@Left(@UpperCase(@Subset(@DbName;-1));\".\");\"\\\\\";\"/\");\"/\")+\"', '\" + DocId + \"', '\"+ FileId + \"', '@FileName',  '@FileSuffix', '\"+FileType+\"','正常', 0, NOW);\nINSERT INTO EGOV_FILE (ID, FILE_PATH, CREATE_TIME) VALUES('\"+ FileId +\"', '\"+ FileId +\"', NOW);\"",
+        "before_sql_formula": "\"DELETE FROM EGOV_GOODS_USE_RECORD WHERE APPLY_GOODS_ID = '\"+@Text(@DocumentUniqueID)+\"'\";",
+        "after_sql_formula": "DOMINO_PID := @Text(@DocumentUniqueID);\nret:=\"DELETE FROM EGOV_GOODS_USE_RECORD WHERE APPLY_GOODS_ID = '\"+@Text(@DocumentUniqueID)+\"';\" + @Char(10);\nret:=ret+\"UPDATE EGOV_OPINION SET DOC_ID = '\"+DOMINO_PID+\"' WHERE DOMINO_PID ='\"+DOMINO_PID+\"';\" + @Char(10);\n@For(n := 1; n<= @Elements(Type); n := n + 1;\n\t@Do(\n\t\tret:=ret + \"INSERT INTO EGOV_GOODS_USE_RECORD (ID, APPLY_GOODS_ID, GOODS_TYPE, UNIT) \n\t\t\t\t\tVALUES(newid(), '\"+DOMINO_PID+\"', '\"+Type[n]+\"','\"+@If(@Elements(Unit)>=n;Unit[n];\"\")+\"');\" + @Char(10)\n\t)\n);\nret",
         "children": [
           {
             "enable": true,
-            "vesion": "1.6.4",
+            "vesion": "1.0.0",
             "ftppath": "/FTP_XC/",
             "domino_server": "@If(MSSSERVER=\"\";@ServerName;MSSSERVER)",
             "domino_dbpath": "@If(MSSOpinion=!\"\";MSSOpinion;OpinionlogDatabase!=\"\";OpinionlogDatabase;@ServerName)",
@@ -139,7 +131,7 @@
           }
         ]
       },
-      "sql_table": "EGOV_INFORMAL",
+      "sql_table": "SFTOA.EGOV_GOODS_APPLY",
       "sql_update_primary_key": {
         "sql_name": "DOMINO_ID",
         "domino_formula": "@Text(@DocumentUniqueID)",
@@ -147,86 +139,47 @@
         "scale_length": 0
       },
       "sql_field_others": [
-        {
+		{
           "sql_name": "ID",
-          "domino_name": "ArcXC_UUID_16",
-          "jdbc_type": "VARCHAR",
-          "scale_length": 0
-        },
-        {
-          "sql_name": "DOMINO_ID",
           "domino_formula": "@Text(@DocumentUniqueID)",
           "jdbc_type": "VARCHAR",
           "scale_length": 0
         },
         {
-          "sql_name": "SUBJECT",
+          "sql_name": "DOMINO_ID", 
+          "domino_formula": "@Text(@DocumentUniqueID)",
+          "jdbc_type": "VARCHAR",
+          "scale_length": 0
+        },
+        {
+          "sql_name": "APPLY_DATE",
+          "domino_formula": "RegDate",
+          "jdbc_type": "VARCHAR",
+          "scale_length": 0
+        },
+        {
+          "sql_name": "BUSINESS_SUBJECT",
           "domino_formula": "Subject",
           "jdbc_type": "VARCHAR",
           "scale_length": 0
         },
         {
-          "sql_name": "DOC_WORD",
-          "domino_name": "DocWord",
+          "sql_name": "APPLY_DEPT_NAME",
+          "domino_formula": "UseDeptTitle",
           "jdbc_type": "VARCHAR",
           "scale_length": 0
         },
         {
-          "sql_name": "DEAL_UNIT_NO",
-          "domino_name": "DraftDept",
+          "sql_name": "USER_NAME",
+          "domino_formula": "Sqr",
           "jdbc_type": "VARCHAR",
           "scale_length": 0
         },
         {
-          "sql_name": "DEAL_UNIT",
-          "domino_name": "DraftDeptTitle",
+          "sql_name": "ROOM",
+          "domino_formula": "Room",
           "jdbc_type": "VARCHAR",
           "scale_length": 0
-        },
-        {
-          "sql_name": "SEAL_NAME",
-          "domino_name": "SealName",
-          "jdbc_type": "VARCHAR",
-          "scale_length": 0
-        },
-        {
-          "sql_name": "MAIN_SEND",
-          "domino_formula": "\"[\"+@If(SendUnit!=\"\"; \"\\\"\"+@Implode(SendUnit;\"\\\", \\\"\")+\"\\\"\"; \"\")+\"]\"",
-          "jdbc_type": "VARCHAR",
-          "scale_length": 0
-        },
-        {
-          "sql_name": "PRINT_NUM",
-          "domino_formula": "@If(@IsNumber(PrintNum);PrintNum;PrintNum=\"\";0;@ToNumber(PrintNum))",
-          "jdbc_type": "INTEGER",
-          "scale_length": 0
-        },
-        {
-          "sql_name": "FLOW_STATUS",
-          "domino_formula": "\"finish\""
-        },
-        {
-          "sql_name": "DRAFT_DATE",
-          "domino_formula": "DraftDate",
-          "jdbc_type": "TIMESTAMP",
-          "scale_length": 0
-        },
-        {
-          "sql_name": "DRAFT_USER_NAME",
-          "domino_name": "DrafterTitle",
-          "jdbc_type": "VARCHAR",
-          "scale_length": 0
-        },
-        {
-          "sql_name": "DRAFT_USER_NO",
-          "domino_formula": "@Name([CN];Drafter);@Nothing",
-          "jdbc_type": "INTEGER",
-          "scale_length": 0
-        },
-        {
-          "sql_name": "DEADLINE",
-          "domino_formula": "deadline",
-          "jdbc_type": "TIMESTAMP"
         },
         {
           "sql_name": "SYSTEM_NO",
@@ -234,9 +187,13 @@
           "jdbc_type": "VARCHAR"
         },
         {
-          "sql_name": "EXTENSION_READER",
-          "domino_formula": "ret:=@Name([CN];@Trim(@Unique(C_UsedReader:C_UserReader:C_UserAgentReader:C_AdminReader:C_AdminReader)));\n@If(ret=\"\";\"[]\";\"[{\\\"readerNo\\\":\\\"\"+@Implode(ret;\"\\\"},{\\\"readerNo\\\":\\\"\")+\"\\\"}]\")\n",
-          "jdbc_type": "VARCHAR",
+          "sql_name": "FLOW_STATUS",
+          "domino_formula": "\"finish\""
+        },
+        {
+          "sql_name": "PASS_READER",
+		  "domino_formula": "ret:=@Name([CN];@Trim(@Unique(C_UsedReader:C_UserReader:C_UserAgentReader:C_AdminReader:C_AdminReader)));\nret:=@DbLookup(\"\":\"NoCache\"; @ServerName:\"uumsUser.nsf\";\"UserMapper\"; ret; \"userNo\");\n@If(@IsError(ret)|ret=\"\";\"[]\";\"[{\\\"readerNo\\\":\\\"\"+@Implode(ret;\"\\\"},{\\\"readerNo\\\":\\\"\")+\"\\\"}]\");",
+		  "jdbc_type": "VARCHAR",
           "scale_length": 0
         }
       ]
